@@ -23,6 +23,7 @@ Changes in current version:
  o Removed obsoleted recalc code
  o support for 32-bit tag numbers in rpc structures; this is wire compatible, but changes the API slightly.
  o pull setters/getters out of RPC structures into a base class to which we just need to store a pointer; this reduces the memory footprint of these structures.
+ o prefix {encode,decode}_tag functions with evtag to avoid collisions
    
 
 Changes in 1.4.0:
